13/09/2012 - v1.0-alpha1
	* ADDED: send and receive files;
	* ADDED: errors checking;
	* ADDED: check if the input is a file or a dir;

14/09/2012 - v1.0-alpha2
	* ADDED: wait to the user confirmation before receive a file
	* ADDED: scan all lan IPv4 address and print active hosts
	* ADDED: readme
	* FIXED: some minor bugs

16/09/2012 - v1.0-alpha3
	* ADDED: custom entry for static ip
	* ADDED: send multiple files

26/09/2012 - v1.0-beta1
	* ADDED: percentage when sending or receiving files
	* FIXED: interger overflow bug

26/09/2012 - v1.0-beta2
	* FIXED: now you can send file with spaces into their name
	* IMPROVED: improved the code of get_ipv4 function

27/09/2012 - v1.0-beta3
	* ADDED: now you can send files with relative path, absolute path or both of them :)
	* ADDED: "Yes to All" confirmation
	* IMPROVED: readme file

01/10/2012 - v1.0-rc
	* ADDED: configure script
	* TEST: done stress test

02/10/2012 - v1.0.0
	* RELEASE: newstable release is out :)

??/02/2013 - v1.1.0
	* ADDED: md5sum check for each transferred file

??/??/2013 - v2.0
	* ADDED: possibility to encrypt the file before send it
	* ADDED: secure transfer (thanks to libSSH2)