@@ -1,2 +1,0 @@
-SUBDIRS = src
-AM_CFLAGS = -Wall -Wextra -Wformat-security -O2 -D_FORTIFY_SOURCE=2 -fstack-protector
