@@ -1,3 +1,0 @@
-bin_PROGRAMS = landnd
-landnd_SOURCES = main.c get_ipv4.c get_connected_ip.c do_send.c do_recv.c get_ip_from_file.c remove_char.c replace_space_with_vbar.c
-landnd_CFLAGS = $(AM_CFLAGS)
